--- a/src/app/components/employee/raise-ticket/raise-ticket.component.scss
+++ b/src/app/components/employee/raise-ticket/raise-ticket.component.scss
@@ -410,6 +410,7 @@ html, body {
     border: 1px solid #ccc;
     min-width: 140px;
     font-size: 0.9rem;
+    flex: 1;
   }
 
   .save-btn {
@@ -425,6 +426,9 @@ html, body {
       background-color: #1e7e34;
     }
   }
+  .save-btn.right {
+  white-space: nowrap;
+}
 }
 
 .resolve-wrapper {
