Initial Angular project commit

--- a/src/app/components/employee/raise-ticket/raise-ticket.component.html
+++ b/src/app/components/employee/raise-ticket/raise-ticket.component.html
@@ -67,7 +67,7 @@
     </select>
 
     <button 
-      class="save-btn right" 
+      class="save-btn" 
       *ngIf="selectedAdminId" 
       (click)="assignTicket(ticket.id)">
       Save
