--- a/src/app/components/employee/raise-ticket/raise-ticket.component.html
+++ b/src/app/components/employee/raise-ticket/raise-ticket.component.html
@@ -137,7 +137,7 @@
 
       <div class="actions">
         <button type="button" class="cancel" (click)="closeModal()">Cancel</button>
-        <button type="submit" [disabled]="ticketForm.invalid">Submit</button>
+        <button type="submit" [disabled]="ticketForm.invalid">Save</button>
       </div>
 
     </form>
