--- a/src/app/components/employee/raise-ticket/raise-ticket.component.scss
+++ b/src/app/components/employee/raise-ticket/raise-ticket.component.scss
@@ -431,7 +431,7 @@ html, body {
     align-self: flex-end; 
 
     &:hover {
-      background-color: #1e7e34;
+      background-color: #4f46e5;
     }
   }
   .save-btn.right {
