--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+  <!-- Loader Overlay -->
+  <div class="loader-overlay" *ngIf="loading">
+    <div class="loader-box">
+      <div class="spinner"></div>
+      <p>Loading tickets...</p>
+    </div>
+  </div>
 <router-outlet></router-outlet>
