--- a/src/app/components/employee/raise-ticket/raise-ticket.component.html
+++ b/src/app/components/employee/raise-ticket/raise-ticket.component.html
@@ -21,12 +21,12 @@
   </div>
 
   <!-- Loader Overlay -->
-  <div class="loader-overlay" *ngIf="loading">
+  <!-- <div class="loader-overlay" *ngIf="loading">
     <div class="loader-box">
       <div class="spinner"></div>
       <p>Loading tickets...</p>
     </div>
-  </div>
+  </div> -->
 
   <!-- Ticket Cards -->
 <div class="ticket-cards">
