--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-  <!-- Loader Overlay -->
-  <div class="loader-overlay" *ngIf="loading">
-    <div class="loader-box">
-      <div class="spinner"></div>
-      <p>Loading tickets...</p>
-    </div>
+<!-- Loader Overlay -->
+<div class="loader-overlay" *ngIf="loading$ | async">
+  <div class="loader-box">
+    <div class="spinner"></div>
+    <p>Please wait...</p>
   </div>
+</div>
+
 <router-outlet></router-outlet>
