--- a/src/app/components/layout/sidebar/sidebar.component.html
+++ b/src/app/components/layout/sidebar/sidebar.component.html
@@ -12,7 +12,14 @@
       routerLink="/employee/raise-ticket"
       routerLinkActive="active">
       <span class="material-icons icon">confirmation_number</span>
-      <span class="text">Manage Ticket</span>
+      <span class="text">Manage Tickets</span>
+    </li>
+
+    <li
+      routerLink="/ticket/history"
+      routerLinkActive="active">
+      <span class="material-icons icon">confirmation_number</span>
+      <span class="text">Ticket History</span>
     </li>
     <li class="logout" (click)="logout()">      
       <span class="material-icons icon">logout</span>
