--- a/src/app/components/employee/employee-dashboard/employee-dashboard.component.scss
+++ b/src/app/components/employee/employee-dashboard/employee-dashboard.component.scss
@@ -1,10 +1,16 @@
 .page-title {
-  font-size: 24px;
+  // font-family: auto;
+  font-size: 28px;
   font-weight: 700;
-  margin-bottom: 24px;
-  color: #0f172a;
-  letter-spacing: -0.4px;
+  margin-bottom: 28px;
+  letter-spacing: -0.5px;
+
+  background: linear-gradient(90deg, #2563eb, #7c3aed);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
 }
+
 
 /* Card Grid */
 .cards {
